--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@
   <title>MJPEG Stream</title>
 </head>
 <body>
-<img src="/cgi-bin/stream" alt="MJPEG Stream" width="100%" height="100%" />
+<img src="/cgi-bin/stream" alt="MJPEG Stream" width="100%" height="100%" onerror="triggerUpdate()" onabort="triggerUpdate()" />
+<script type="text/javascript">
+var img = document.getElementsByTagName('img')[0];
+var lastUpdate = new Date();
+var updates = 0;
+var t = null;
+
+update = function() {
+  lastUpdate = new Date();
+  img.src = '/cgi-bin/stream?' + (+lastUpdate);
+}
+
+triggerUpdate = function() {
+  updates++;
+  if (t != null) clearTimeout(t);
+  t = setTimeout(update, 250 * Math.max(20, updates));
+}
+
+document.onreadystatechange = function() {
+  console.debug(document.readyState);
+  if (document.readyState === 'complete') {
+    triggerUpdate();
+  }
+}
+</script>
 </body>
 </html>
