--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
   <title>MJPEG Stream</title>
+  <style>
+    img { position: absolute; top: 0; width: 100%; height: 100%; }
+  </style>
 </head>
 <body>
-<img src="/cgi-bin/stream" alt="MJPEG Stream" width="100%" height="100%" onerror="triggerUpdate()" onabort="triggerUpdate()" />
+<img src="/cgi-bin/stream" alt="MJPEG Stream" width="100%" height="100%" onerror="triggerUpdate()" onabort="triggerUpdate()" onclick="update()" />
 <script type="text/javascript">
 var img = document.getElementsByTagName('img')[0];
 var lastUpdate = new Date();
@@ -19,7 +22,7 @@ update = function() {
 triggerUpdate = function() {
   updates++;
   if (t != null) clearTimeout(t);
-  t = setTimeout(update, 250 * Math.max(20, updates));
+  t = setTimeout(update, 1000);
 }
 
 document.onreadystatechange = function() {
