--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <title>MJPEG Stream</title>
   <style>
-    img { position: absolute; top: 0; width: 100%; height: 100%; }
+    body { background: black; }
+    img { position: absolute; top: 0; width: 100%; }
   </style>
 </head>
 <body>
-<img src="/cgi-bin/stream" alt="MJPEG Stream" width="100%" height="100%" onerror="triggerUpdate()" onabort="triggerUpdate()" onclick="update()" />
+<img src="/cgi-bin/stream" alt="MJPEG Stream" width="100%" onerror="triggerUpdate()" onabort="triggerUpdate()" onclick="update()" />
 <script type="text/javascript">
 var img = document.getElementsByTagName('img')[0];
 
@@ -36,6 +37,11 @@ document.onreadystatechange = function() {
   if (document.readyState === 'complete') {
     triggerUpdate();
   }
+}
+
+if (location.search.indexOf('reload_after=') != -1) {
+  var interval = location.search.split('reload_after=')[1].split('&')[0];
+  setInterval(function() { update(); }, parseInt(interval) * 1000);
 }
 
 // Safari iOS bug with iframes
